// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Context menu when rendering with paste ability should render 1`] = `
<React.Fragment>
  <button
    onClick={[Function]}
    type="button"
  >
    Copy selected
  </button>
  <button
    onClick={[Function]}
    type="button"
  >
    Copy all
  </button>
  <button
    onClick={[Function]}
    type="button"
  >
    Paste (append)
  </button>
  <button
    onClick={[Function]}
    type="button"
  >
    Paste and replace
  </button>
</React.Fragment>
`;

exports[`Context menu when rendering without paste ability should render 1`] = `
<React.Fragment>
  <button
    onClick={[Function]}
    type="button"
  >
    Copy selected
  </button>
  <button
    onClick={[Function]}
    type="button"
  >
    Copy all
  </button>
</React.Fragment>
`;
